--- a/.github/workflows/pull-reguest-managemnt.yml
+++ b/.github/workflows/pull-reguest-managemnt.yml
@@ -10,7 +10,7 @@ on:
     types:
       - submitted
 
-permissions: {}
+permissions: { }
 
 jobs:
   review-decision:
@@ -53,7 +53,7 @@ jobs:
       pull-requests: write
 
     needs: review-decision
-    if:  needs.review-decision.outputs.approved && github.event.pull_request.milestone == null
+    if: github.event.pull_request.milestone == null && needs.review-decision.outputs.approved
     runs-on: ubuntu-latest
     steps:
       - name: Update milestone
@@ -76,6 +76,8 @@ jobs:
               throw new Error('There are more then oen open milestones ... please choose manually')
             }
             
+            console.log('Set milestone to: ' + milestones.data[0].title);
+            
             const result = await github.rest.issues.update({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -86,18 +88,38 @@ jobs:
             console.log(result);
 
   labels:
+    permissions:
+      issues: write
+      pull-requests: write
+
     needs: review-decision
     runs-on: ubuntu-latest
-    if: needs.review-decision.outputs.approved || contains(fromJSON('["labeled", "unlabeled"]'), github.event.action)
+    if: >
+      github.event.pull_request.labels == null && 
+      (needs.review-decision.outputs.approved || contains(fromJSON('["labeled", "unlabeled"]'), github.event.action))
     steps:
 
-      - name: Check labels
+      - name: Set default label
         uses: actions/github-script@v7
         env:
           DEFAULT_LABEL: "maintenance"
         with:
           script: |
             
-            console.log(context);
+            console.log(context.issue.labels);
             
-            console.log(process.env);
+            if ( !context.issue.labels?.length ) {
+            
+              if ( !process.env.DEFAULT_LABEL ) {
+                throw new ERROR('There are no labels on PR and default label is not set');
+              }
+            
+              const result = await github.rest.issues.update({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                labels: [ process.env.DEFAULT_LABEL ]
+              });
+            
+              console.log(result);
+            }
