--- a/.github/workflows/pull-reguest-managemnt.yml
+++ b/.github/workflows/pull-reguest-managemnt.yml
@@ -4,8 +4,8 @@ on:
   pull_request:
     types:
       - closed
-      - labeled
       - unlabeled
+      - demilestoned
   pull_request_review:
     types:
       - submitted
@@ -53,7 +53,9 @@ jobs:
       pull-requests: write
 
     needs: review-decision
-    if: github.event.pull_request.milestone == null && needs.review-decision.outputs.approved
+    if: >
+      github.event.pull_request.milestone == null && 
+      ( needs.review-decision.outputs.approved || github.event.action == 'demilestoned' )
     runs-on: ubuntu-latest
     steps:
       - name: Update milestone
@@ -95,8 +97,8 @@ jobs:
     needs: review-decision
     runs-on: ubuntu-latest
     if: >
-      github.event.pull_request.labels == null && 
-      (needs.review-decision.outputs.approved || contains(fromJSON('["labeled", "unlabeled"]'), github.event.action))
+      github.event.pull_request.labels == null &&
+      ( needs.review-decision.outputs.approved || github.event.action == 'unlabeled' )
     steps:
 
       - name: Set default label
