--- a/.github/workflows/pull-reguest-managemnt.yml
+++ b/.github/workflows/pull-reguest-managemnt.yml
@@ -20,6 +20,9 @@ jobs:
       approved: ${{ steps.review-decision.outputs.result }}
 
     steps:
+      - name: Dump github
+        run: echo ${{ toJson(github) }}
+
       - name: Get Review decision
         id: review-decision
         uses: actions/github-script@v7
