--- a/.github/workflows/pull-reguest-managemnt.yml
+++ b/.github/workflows/pull-reguest-managemnt.yml
@@ -1,18 +1,40 @@
-name: Pull Request Management
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#       http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
 
+name: PR Automation
 on:
-  pull_request:
-    types:
-      - closed
-      - unlabeled
-      - demilestoned
-  pull_request_review:
-    types:
-      - submitted
+  workflow_call:
+    inputs:
+      default-label:
+        description: The default label to add to PR
+        required: false
+        default: 'maintenance'
+        type: string
 
-permissions: { }
+# allow single build per branch or PR
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
+# clare all permissions for GITHUB_TOKEN
+permissions: {}
 
 jobs:
+  # read current PR approval status
   review-decision:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
@@ -24,18 +46,17 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: echo "$GITHUB_CONTEXT"
-        shell: bash
 
       - name: Get Review decision
         id: review-decision
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
         with:
           result-encoding: string
           script: |
             const query = `query($owner:String!, $name:String!, $number:Int!) {
               repository(name: $name, owner: $owner) {
                 pullRequest(number: $number) {
-                  reviewDecision, merged, closed
+                  reviewDecision, merged
                 }
               }
             }`;
@@ -48,22 +69,23 @@ jobs:
             
             const result = await github.graphql(query, variables)
             console.log(result)
-            const pr = result.repository.pullRequest; 
-            return (pr.reviewDecision == 'APPROVED' && !pr.closed) || pr.merged
+            
+            return result.repository.pullRequest.reviewDecision == 'APPROVED' || result.repository.pullRequest.merged
       - name: Result
         run: echo "${{ steps.review-decision.outputs.result }}"
 
+  # check PR milestone - if not set - update with current opened milestone
   milestone:
     permissions:
       issues: write
       pull-requests: write
 
     needs: review-decision
-    if: ( needs.review-decision.outputs.approved || github.event.action == 'demilestoned' ) && !github.event.pull_request.milestone
+    if: (needs.review-decision.outputs.approved == 'true' || (github.event.action == 'demilestoned' && github.event.pull_request.state == 'open')) && !github.event.pull_request.milestone
     runs-on: ubuntu-latest
     steps:
       - name: Update milestone
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
         with:
           script: |
             const milestones = await github.rest.issues.listMilestones({
@@ -93,21 +115,21 @@ jobs:
             
             console.log(result);
 
+  # check PR labels - if is empty list add one default
   labels:
     permissions:
       issues: write
       pull-requests: write
 
     needs: review-decision
-    if: ( needs.review-decision.outputs.approved || github.event.action == 'unlabeled' ) && toJSON(github.event.pull_request.labels) == '[]'
+    if: (needs.review-decision.outputs.approved == 'true' || (github.event.action == 'unlabeled' && github.event.pull_request.state == 'open')) && toJSON(github.event.pull_request.labels) == '[]'
     runs-on: ubuntu-latest
     steps:
 
       - name: Set default label
-
-        uses: actions/github-script@v7
+        uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
         env:
-          DEFAULT_LABEL: "maintenance"
+          DEFAULT_LABEL: ${{ inputs.default-label }}
         with:
           script: |
             
