--- a/.github/workflows/pull-reguest-managemnt.yml
+++ b/.github/workflows/pull-reguest-managemnt.yml
@@ -121,7 +121,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              milestone: milestones.number
+              milestone: milestone.number
             });
             
             console.log(result);
