--- a/.github/workflows/pull-reguest-managemnt.yml
+++ b/.github/workflows/pull-reguest-managemnt.yml
@@ -98,7 +98,6 @@ jobs:
             });
             
             console.log(milestones);            
-            console.log(context.payload.pull_request);
             const branch = context.payload.pull_request.base.ref
             
             if ( milestones.data.length == 0 ) {
@@ -115,8 +114,7 @@ jobs:
               milestone = milestones.data[0];
             }
             
-            console.log('Set milestone to:');
-            console.log(milestone);
+            console.log('Set milestone to: ' + milestone.title);
             
             const result = await github.rest.issues.update({
               owner: context.repo.owner,
