--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -13,6 +13,8 @@ jobs:
 
 
     steps:
+      - uses: actions/checkout@v3
+
       - name: Sync labels on ${{ matrix.repo }}
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
         env:
@@ -21,19 +23,11 @@ jobs:
           github-token: ${{ github.token }}
           script: |
             
-            const labels = [
-              {
-                name: 'bug',
-                color: 'B60205',
-                description: 'Something isn\'t working.'
-              },
-              {
-                name: 'duplicate',
-                color: 'cfd3d7',
-                description: 'This issue or pull request already exists.'
-              }
-            ];
-          
+            require('./github/labels.js');
+
+            console.log('labels:');
+            console.log(labels);
+            
             const currentLabels = await github.rest.issues.listLabelsForRepo({
                 owner: 's4u',
                 repo: process.env.REPO
@@ -42,8 +36,6 @@ jobs:
             console.log('currentLabels:');
             console.log(currentLabels);
 
-            console.log('labels:');
-            console.log(labels);
             
             for (const label of labels) {
               const currentLabel = currentLabels.data.find(({name}) => name == label.name);
