--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -23,7 +23,7 @@ jobs:
           github-token: ${{ github.token }}
           script: |
             
-            require('../labels.js');
+            require('./.github/labels.js');
 
             console.log('labels:');
             console.log(labels);
