--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -30,7 +30,9 @@ jobs:
         with:
           github-token: ${{ inputs.token }}
           script: |
-            
+
+            core.setSecret(core.getInput('github-token'));
+
             const labels = require('./.github/labels.js');
 
             console.log('Labels to update:');
