--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -20,6 +20,9 @@ jobs:
 
 
     steps:
+      - name: Mask GitHub token
+        run: echo "::add-mask::${{ inputs.token }}"
+
       - uses: actions/checkout@v3
 
       - name: Sync labels on ${{ matrix.repo }}
