--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -23,7 +23,9 @@ jobs:
       - name: Mask GitHub token
         run: echo "::add-mask::$(jq -r '.inputs.token' $GITHUB_EVENT_PATH)"
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3
+        with:
+          persist-credentials: false
 
       - name: Sync labels on ${{ matrix.repo }}
         uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
@@ -38,8 +40,6 @@ jobs:
             console.log('Labels to update:');
             console.log(labels);
             
-            console.log(process.env);
-            
             const currentLabels = await github.rest.issues.listLabelsForRepo({
                 owner: process.env.OWNER,
                 repo: process.env.REPO
@@ -47,8 +47,7 @@ jobs:
             
             console.log('Current project labels:');
             console.log(currentLabels.data);
-
-            
+          
             for (const label of labels) {
               const currentLabel = currentLabels.data.find(({name}) => name == label.name);
 
