--- a/.github/workflows/stale-ex.yml
+++ b/.github/workflows/stale-ex.yml
@@ -2,7 +2,7 @@ name: Stale execution
 
 on:
   schedule:
-    - cron: '7/8 * * * *'
+    - cron: '40 * * * *'
   issue_comment:
     types: [ 'created' ]
 
