--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -27,11 +27,8 @@ permissions:
   pull-requests: write
 
 jobs:
-  waiting-for-feedback:
-    if: github.event_name == 'schedule'
-    name: 'Manage issues, PRs with waiting-for-feedback label'
+  env:
     runs-on: ubuntu-latest
-
     steps:
       - name: Dump GitHub context
         env:
@@ -39,6 +36,12 @@ jobs:
         run: echo "$GITHUB_CONTEXT"
         shell: bash
 
+  waiting-for-feedback:
+    if: github.event_name == 'schedule'
+    name: 'Manage issues, PRs with waiting-for-feedback label'
+    runs-on: ubuntu-latest
+
+    steps:
       - uses: actions/stale@5bef64f19d7facfb25b37b414482c7164d639639 # v9
         with:
           days-before-stale: '28'
@@ -51,3 +54,10 @@ jobs:
           exempt-all-milestones: 'true'
           exempt-issue-labels: 'priority:blocker,priority:critical'
           exempt-pr-labels: 'priority:blocker,priority:critical'
+
+  remove-label:
+    if: github.event_name == 'issue_comment' && github.event.action == 'created' && contains(github.event.issue.labels.*.name, 'bug')
+    runs-on: ubuntu-latest
+
+    steps:
+      - run: echo "ok"
