--- a/.github/workflows/milestones.yml
+++ b/.github/workflows/milestones.yml
@@ -46,26 +46,29 @@ jobs:
 
   current-milestone:
     needs: detect-version
-    uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
-    env:
-      CURRENT_VERSION: ${{ needs.detect-version.outputs.version }}
-    with:
-      script: |
-        const milestones = await github.rest.issues.listMilestones({
-          owner: context.repo.owner,
-          repo: context.repo.repo,
-          state: 'open'
-        });
-        
-        console.log(milestones);
-        const branch = context.payload.pull_request.base.ref
-        
-        if (milestones.data.length == 0) {
-          // no milestone create one
-          github.rest.issues.createMilestone({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            title: process.env.DEFAULT_LABEL,
-            description: 'branch: ' + branch
-          });
-        }
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea # v7
+        env:
+          CURRENT_VERSION: ${{ needs.detect-version.outputs.version }}
+        with:
+          script: |
+            const milestones = await github.rest.issues.listMilestones({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open'
+            });
+            
+            console.log(milestones);
+            const branch = context.payload.pull_request.base.ref
+            
+            if (milestones.data.length == 0) {
+              // no milestone create one
+              github.rest.issues.createMilestone({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                title: process.env.DEFAULT_LABEL,
+                description: 'branch: ' + branch
+              });
+            }
